# drf_project

./: .gitignore  Dockerfile  docker-compose.yml  drf_project.postman_collection.json  nginx.conf  pyproject.toml  read_me.txt
backend/: database-copy.json
backend/apps/auth/: apps.py  serializers.py  urls.py  views.py
backend/apps/city/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/post/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/post_label/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/region/: serializers.py  urls.py  views.py
backend/apps/user/: filters.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/configs/extra_configs/: __init__.py  jwt_conf.py  rest_config.py
backend/core/: pagination.py
backend/core/checkers/: profanity_checker.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/exceptions/: profanity_check_exception.py  property_check_exception.py
backend/core/handlers/: error_handler.py
backend/core/management/commands/: wait_db.py
backend/core/services/: email_service.py  file_service.py
backend/templates/: recovery.html  registration.html
frontend/: package.json
frontend/src/: index.js  router.js
frontend/src/constants/: urls.js
frontend/src/layouts/: MainLayout.js
frontend/src/services/: PostService.js  apiService.js  authService.js  cityService.js  postLabelService.js  postService.js  regionService.js  userService.js
(+34 files in other folders)
